--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: dcyprien <dcyprien@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/08/18 19:51:49 by dcyprien          #+#    #+#              #
-#    Updated: 2022/06/15 13:33:38 by dcyprien         ###   ########.fr        #
+#    Updated: 2022/08/12 14:31:35 by dcyprien         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,6 +26,9 @@ RM		=	rm -f
 $(NAME):	$(OBJS)
 	${CCXX} ${CXXFLAGS} -o ${NAME} ${OBJS}
 
+%.o: %.cpp
+	$(CCXX) $(CXXFLAGS) -c $< -o $@
+	
 all:		${NAME}
 
 clean:			
